--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,11 +130,13 @@
         <li class='list'>
           <%= link_to item_path(item.id) do %>
           <div class='item-img-content'>
-            <%= image_tag (item.image), class: "item-img" if item.image.attached? %>
+            <%= image_tag item.image, class: "item-img" if item.image.attached? %>
             <%# 商品が売れていればsold outを表示しましょう %>
-            <%# <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div> %>
+            <% if item.order != nil %>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+            <% end %>
             <%# //商品が売れていればsold outを表示しましょう %>
 
           </div>
